--- a/TP_Comanda/package.json
+++ b/TP_Comanda/package.json
@@ -13,8 +13,10 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^12.2.10",
     "@angular/common": "~12.1.1",
     "@angular/core": "~12.1.1",
+    "@angular/fire": "^7.1.1",
     "@angular/forms": "~12.1.1",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
@@ -24,7 +26,11 @@
     "@capacitor/haptics": "1.1.2",
     "@capacitor/keyboard": "1.1.2",
     "@capacitor/status-bar": "1.0.5",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/vibration": "^5.36.0",
     "@ionic/angular": "^5.5.2",
+    "firebase": "^9.1.3",
+    "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
