--- a/TP_Comanda/package.json
+++ b/TP_Comanda/package.json
@@ -26,6 +26,8 @@
     "@capacitor/haptics": "1.1.2",
     "@capacitor/keyboard": "1.1.2",
     "@capacitor/status-bar": "1.0.5",
+    "@ionic-native/barcode-scanner": "^5.36.0",
+    "@ionic-native/camera": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/vibration": "^5.36.0",
     "@ionic/angular": "^5.5.2",
