--- a/TP_Comanda/android/capacitor-cordova-android-plugins/src/main/AndroidManifest.xml
+++ b/TP_Comanda/android/capacitor-cordova-android-plugins/src/main/AndroidManifest.xml
@@ -5,5 +5,7 @@ xmlns:amazon="http://schemas.amazon.com/apk/res/android">
 <application  >
 
 </application>
-
+    <uses-permission android:name="android.permission.INTERNET"/>    
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERMAL_STORAGE"/>
 </manifest>
