--- a/TP_Comanda/package.json
+++ b/TP_Comanda/package.json
@@ -25,12 +25,14 @@
     "@capacitor-community/barcode-scanner": "^2.0.1",
     "@capacitor/android": "^3.2.5",
     "@capacitor/app": "1.0.5",
+    "@capacitor/browser": "1.0.5",
     "@capacitor/camera": "^1.1.2",
     "@capacitor/core": "3.2.5",
     "@capacitor/filesystem": "^1.0.5",
     "@capacitor/haptics": "1.1.2",
     "@capacitor/keyboard": "1.1.2",
     "@capacitor/status-bar": "1.0.5",
+    "@ionic-native/barcode-scanner": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/vibration": "^5.36.0",
     "@ionic/angular": "^5.5.2",
@@ -38,6 +40,7 @@
     "capacitor-resources": "^2.0.5",
     "firebase": "^9.1.3",
     "ngx-toastr": "^14.1.3",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -54,6 +57,7 @@
     "@angular/language-service": "~12.0.1",
     "@capacitor/cli": "3.2.5",
     "@ionic/angular-toolkit": "^4.0.0",
+    "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
