--- a/TP_Comanda/package.json
+++ b/TP_Comanda/package.json
@@ -38,6 +38,7 @@
     "@ionic/pwa-elements": "^3.0.2",
     "capacitor-resources": "^2.0.5",
     "firebase": "^9.1.3",
+    "jquery": "^3.6.0",
     "ngx-toastr": "^14.1.3",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.6.0",
