--- a/TP_Comanda/package.json
+++ b/TP_Comanda/package.json
@@ -37,6 +37,7 @@
     "@ionic/angular": "^5.5.2",
     "@ionic/pwa-elements": "^3.0.2",
     "capacitor-resources": "^2.0.5",
+    "emailjs-com": "^3.2.0",
     "firebase": "^9.1.3",
     "jquery": "^3.6.0",
     "ngx-toastr": "^14.1.3",
