--- a/TP_Comanda/android/app/src/main/assets/capacitor.config.json
+++ b/TP_Comanda/android/app/src/main/assets/capacitor.config.json
@@ -2,14 +2,5 @@
 	"appId": "io.ionic.starter",
 	"appName": "TP_Comanda",
 	"webDir": "www",
-	"bundledWebRuntime": false,
-	"plugins": {
-		"PushNotifications": {
-			"presentationOptions": [
-				"badge",
-				"sound",
-				"alert"
-			]
-		}
-	}
+	"bundledWebRuntime": false
 }
